* Wed Jun 06 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.4-0
- Added auditd::failure_mode entries for DISA STIG
- Added auditd::config::audit_profiles::simp::audit_selinux_cmds
  entries for DISA STIG.
- Corrected auditd::enable identifiers in DISA STIG profiles 

* Fri May 18 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 2.3.4-0
- Added postfix main.cf settings to el7 DISA STIG.

* Wed May 16 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.4-0
- Added aide::aliases entries for DISA STIG
- Replaced OBE simp::yum::enable_auto_updates entries with
  simp::yum::schedule::enable in all profiles
- Added and updated simp::yum::schedules entries for DISA STIG
- Added simp::sysctl entries to the DISA STIG profiles for
  net.ipv4.conf.default.accept_source_route,
  net.ipv4.conf.default.send_redirects, and
  net.ipv6.conf.all.accept_source_route.

* Fri May 04 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 2.3.4-0
- Added and updated ssh::server::conf entries for DISA STIG

* Mon Apr 30 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.3.4-0
- Added 'svckill::mode' to be 'enforcing' in STIG and 800-53 modes

* Fri Apr 27 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.4-0
- Fixed the inappropriate value of useradd::useradd::inactive in
  the DISA STIG profiles.  It is now set to 0.

* Fri Mar 30 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.3.4-0
- Update PAM settings in the `disa_stig` profile
- Fixed issues with the compliance_map logic that were causing false results to
  be added to the 'documented_missing_parameters' and
  'documented_missing_resources' lists

* Tue Mar 06 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.3-0
- Updated TMOUT setting in /etc/profile.d/simp.sh to match EL7 STIG
  setting (Reference: RHEL-07-040160)
- Added missing audispd program to simp_rsyslog::default_logs
- Added missing ' IPT:' message start to simp_ryslog::default_logs.
  This is required for iptables violation messages because some