@@ -259,6 +259,17 @@
         ],
         "value": true
       },
+      "auditd::config::audit_profiles::simp::audit_sudoers": {
+        "identifiers": [
+          "SRG-OS-000037-GPOS-00015",
+          "SRG-OS-000042-GPOS-00020",
+          "SRG-OS-000392-GPOS-00172",
+          "SRG-OS-000462-GPOS-00206",
+          "SRG-OS-000471-GPOS-00215",
+          "RHEL-07-030700"
+        ],
+        "value": true
+      },
       "auditd::config::audit_profiles::simp::audit_suid_sgid": {
         "identifiers": [
           "SRG-OS-000042-GPOS-00020",
