@@ -1,4 +1,6 @@
 * Wed Jun 06 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.4-0
+- Added auditd::config::audit_profiles::simp::audit_sudoers entries
+  for DISA STIG
 - Added auditd::failure_mode entries for DISA STIG
 - Added auditd::config::audit_profiles::simp::audit_selinux_cmds
   entries for DISA STIG.
